--- a/WiFi/res/values/strings.xml
+++ b/WiFi/res/values/strings.xml
@@ -4,5 +4,6 @@
     <string name="app_name">WiFi</string>
     <string name="action_settings">Settings</string>
     <string name="hello_world">Hello world!</string>
+    <string name="item1">Item1</string>
 
 </resources>
