--- a/WiFi/res/values/strings.xml
+++ b/WiFi/res/values/strings.xml
@@ -1,9 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-
+    <!-- MAIN -->
     <string name="app_name">WiFi</string>
-    <string name="action_settings">Settings</string>
-    <string name="hello_world">Hello world!</string>
-    <string name="item1">Item1</string>
+    <string name="action_settings">Settings</string>    
+    <!-- POP UP Sort AP Menu Second Activity -->
+    <string name="Item_AP_name">AP name</string> 
+    <string name="Item_Channel">Channel</string>
+    <!-- JUST FOR TEST -->
+    <string name="item1">Item1</string> 
+    <string name="item2">Item2</string> 
 
 </resources>
